--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Website for Brecelj Grafika d.o.o" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preload" href="./images/naslovnica.png" as="image" />
 
     <!-- font -->
     <link
