--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,6 @@
     <title>POS stojalo</title>
   </head>
   <body>
-    <div id="root">Hello World</div>
+    <div id="root"></div>
   </body>
 </html>
