--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Website for Brecelj Grafika d.o.o" />
+    <meta
+      name="description"
+      content="Specializirani za kakovostna POS stojala, ki povečujejo prodajo in izboljšujejo izkušnjo strank. Odkrijte naše inovativne rešitve za vašo blagovno znamko."
+    />
+    <meta property="og:title" content="Brecelj POS - Inovativna POS stojala" />
+    <meta
+      property="og:description"
+      content="Odkrijte kakovostna POS stojala, ki povečujejo prodajo in izboljšujejo nakupno izkušnjo."
+    />
+    <meta property="og:url" content="https://www.brecelj-pos.eu" />
+    <meta
+      name="google-site-verification"
+      content="DvZO6JNPxW-_ZZf80rEz6K8bzzamkSYMR6coQckyOOA"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preload" href="./images/naslovnica.png" as="image" />
@@ -45,7 +58,7 @@
       gtag("config", "G-9WNSHXHXT9");
     </script>
 
-    <title>POS stojalo</title>
+    <title>POS Stojala | Brecelj POS - Inovativne prodajne rešitve</title>
   </head>
   <body>
     <div id="root"></div>
